# SiManta

./: .gitignore  CMakeLists.txt  build_and_package.bat  build_manual.bat  build_windows.bat  netsupport_school_research.md
.github/workflows/: build-windows.yml  build.yml
common/: CMakeLists.txt  protocol.cpp  protocol.h
installer/: installer.iss  license.txt
student/: CMakeLists.txt  main.cpp  screen_capturer.cpp  screen_capturer.h  student_agent.cpp  student_agent.h
teacher/: CMakeLists.txt  connection_manager.cpp  connection_manager.h  lesson_panel.cpp  lesson_panel.h  main.cpp  sidebar_widget.cpp  sidebar_widget.h  student_grid.cpp  student_grid.h  student_tile.cpp  student_tile.h  styles.h  toolbar_widget.cpp  toolbar_widget.h  tutor_window.cpp  tutor_window.h
teacher/resources/: resources.qrc
